--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
                 </div>
             </nav>
         </header>
-
         <div class="body">
             <section id="hero">
                 <div class="herobox">
@@ -50,14 +49,18 @@
                             <div class="h1">Dupau Emmanuel</div>
                             <div class="h2">UI UX Designer</div>
                             <div class="h2" style="margin-top: -20px">Graphiste web & print</div>
-                            <div class="span-a">Passionné par le design et le développement web, je crée des sites et des interfaces élégants, fonctionnels et optimisés pour le référencement. Je maîtrise les outils Wordpress et Wix, ainsi que les langages HTML, CSS. 
+                            <div class="span-a">Passionné par le design et le développement web, je crée des sites et
+                                des interfaces élégants, fonctionnels et optimisés pour le référencement. Je maîtrise
+                                les outils Wordpress et Wix, ainsi que les langages HTML, CSS.
                                 <br>
                                 <br>
-                                Je possède également les certifications CDUI, Tosa Photoshop et Illustrator, qui attestent de mes compétences en graphisme et  UI UX design. 
+                                Je possède également les certifications CDUI, Tosa Photoshop et Illustrator, qui
+                                attestent de mes compétences en graphisme et UI UX design.
                                 <br>
                                 <br>
-                                En tant que graphiste web et print, je réalise des logos, des affiches, des flyers, des brochures et des supports de communication visuelle adaptés à votre image de marque.
-                                </div>
+                                En tant que graphiste web et print, je réalise des logos, des affiches, des flyers, des
+                                brochures et des supports de communication visuelle adaptés à votre image de marque.
+                            </div>
                             <div class="butonbox">
                                 <div hrf="mailto:dupau.emmanuel@gmail.com" rel="noopener noreferrer nofollow"><a
                                         class="button button1" href="mailto:dupau.emmanuel@gmail.com"
@@ -373,8 +376,7 @@
             <div class="testicontenera">
                 <div class="customercontener">
                     <div class="h4">Très satisfait du travail fourni, ainsi que un suivi client irréprochable.
-                        Je
-                        recommande</div>
+                        Je recommande</div>
                     <div class="customer-card">
                         <img class="testi-photo-box" src="source/img/d8346076a36231ff4eb0df48bc50e528.png" />
                         <div class="customer-text-contener">
